--- a/index.html
+++ b/index.html
@@ -3,35 +3,183 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>oaix</title>
+  <!-- ✅ 标题改为 oAix -->
+  <title>oAix</title>
+  <!-- ✅ 描述改为简洁版 -->
+  <meta name="description" content="Designed by 刘晗" />
+  
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', 'Helvetica Neue', sans-serif;
       background: #0a0a0a;
       color: #f5f5f5;
+      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
       text-align: center;
+      transition: background 0.8s ease;
+      overflow: hidden;
     }
+
+    body:hover {
+      background: #000a1a;
+    }
+
+    .container {
+      padding: 2rem;
+      max-width: 800px;
+      animation: fadeIn 1.2s ease-out;
+      z-index: 10;
+      position: relative;
+    }
+
     h1 {
-      font-size: 3rem;
-      color: #00ffcc;
+      font-size: 4rem;
+      font-weight: 700;
+      letter-spacing: 3px;
+      margin-bottom: 0.5rem;
+      background: linear-gradient(90deg, #00ffcc, #0066ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
     }
-    p {
+
+    .tagline {
+      font-size: 1.4rem;
       color: #aaa;
+      margin: 1rem 0;
+      font-weight: 300;
+    }
+
+    .links {
+      margin-top: 2rem;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+    }
+
+    .links a {
+      color: #00ffcc;
+      text-decoration: none;
+      font-size: 1.1rem;
+      transition: transform 0.3s ease, color 0.3s ease;
+    }
+
+    .links a:hover {
+      color: #0066ff;
+      transform: translateY(-2px);
+    }
+
+    /* 彩蛋模态框 */
+    .easter-egg {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.9);
+      backdrop-filter: blur(10px);
+      z-index: 100;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      color: #fff;
+      font-size: 1.5rem;
+      text-align: center;
+      padding: 2rem;
+    }
+
+    .easter-egg button {
+      margin-top: 1.5rem;
+      padding: 0.8rem 1.5rem;
+      font-size: 1.1rem;
+      background: #00ffcc;
+      color: #000;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: transform 0.2s, background 0.3s;
+    }
+
+    .easter-egg button:hover {
+      background: #0066ff;
+      color: white;
+      transform: scale(1.05);
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2.5rem;
+      }
+      .tagline {
+        font-size: 1.1rem;
+      }
+      .links {
+        gap: 1.2rem;
+      }
     }
   </style>
 </head>
 <body>
-  <div>
+  <div class="container">
     <h1>oaix</h1>
-    <p>Think beyond.</p>
-    <p>By 刘晗</p>
+    <p class="tagline">Think beyond.</p>
+    <!-- ✅ 改为 Designed by 刘晗 -->
+    <p>Designed by 刘晗</p>
+    <div class="links">
+      <a href="https://github.com/haenlau" target="_blank">GitHub</a>
+      <a href="https://instagram.com/haenlau" target="_blank">Instagram</a>
+    </div>
   </div>
+
+  <!-- 彩蛋弹窗 -->
+  <div class="easter-egg" id="egg">
+    <h2>🎉 恭喜你发现了隐藏内容！</h2>
+    <p>你输入了经典的 Konami Code！</p>
+    <button onclick="randomRedirect()">随机跳转到一个神秘页面</button>
+  </div>
+
+  <script>
+    // Konami Code 检测
+    const konamiCode = ['ArrowUp', 'ArrowUp', 'ArrowDown', 'ArrowDown', 'ArrowLeft', 'ArrowRight', 'ArrowLeft', 'ArrowRight', 'b', 'a'];
+    let konamiIndex = 0;
+
+    window.addEventListener('keydown', function(e) {
+      if (e.key.toLowerCase() === konamiCode[konamiIndex].toLowerCase()) {
+        konamiIndex++;
+        if (konamiIndex === konamiCode.length) {
+          document.getElementById('egg').style.display = 'flex';
+          konamiIndex = 0;
+        }
+      } else {
+        konamiIndex = 0;
+      }
+    });
+
+    // 随机跳转
+    function randomRedirect() {
+      const urls = [
+        'https://github.com/haenlau',
+        'https://instagram.com/haenlau',
+        'https://oaix.cn'
+      ];
+      const randomUrl = urls[Math.floor(Math.random() * urls.length)];
+      window.open(randomUrl, '_blank');
+    }
+  </script>
 </body>
-
 </html>
-
