--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 
 <!-- 隐藏彩蛋 -->
 <div class="easter-egg" id="egg">
-  <h2>🎉 恭喜你发现了隐藏内容！</h2>
-  <p>你触发了惊喜彩蛋！</p>
+  <h2>🎉 你发现了隐藏内容 </h2>
+  <p>触发了彩蛋！</p>
   <button id="musicToggle">播放</button>
   <button id="closeEgg">关闭</button>
 </div>
@@ -194,7 +194,7 @@
 <audio id="backgroundMusic" src="files/music.mp3" preload="auto"></audio>
 
 <!-- 提示文字：已修改 -->
-<div class="space-hint">猛击屏幕</div>
+<div class="space-hint"> </div>
 
 <script>
   // 页面加载完成后初始化功能
