--- a/index.html
+++ b/index.html
@@ -219,14 +219,14 @@
 
 <div class="container">
   <h1 id="logo">oAix</h1>
-  <p class="tagline">Where silence speaks.</p>
+  <p class="tagline">Where silence speaks</p>
   <p class="signature">Designed by haen</p>
 </div>
 
 <div class="easter-egg" id="egg">
   <div class="flip-panel">
-    <h2 id="eggTitle">You heard the silence.</h2>
-    <p id="eggDesc">And it spoke to you.</p>
+    <h2 id="eggTitle">You heard the silence</h2>
+    <p id="eggDesc">And it spoke to you</p>
     <button id="musicToggle">Play</button>
     <button id="closeEgg">Close</button>
   </div>
